--- a/frontend/src/items/Index.css
+++ b/frontend/src/items/Index.css
@@ -1,21 +1,22 @@
-table {
+table.ItemsTable {
     display: flex;
     flex-flow: column;
     width: 100%;
+    max-height: 84vh;
 }
 
-thead {
+table.ItemsTable thead {
     flex: 0 0 auto;
 }
 
-tbody {
+table.ItemsTable tbody {
     flex: 1 1 auto;
     display: block;
     overflow-y: auto;
     overflow-x: hidden;
 }
 
-tr {
+table.ItemsTable tr {
     width: 100%;
     display: table;
     table-layout: fixed;
