--- a/frontend/src/items/Index.css
+++ b/frontend/src/items/Index.css
@@ -2,7 +2,7 @@ table.ItemsTable {
     display: flex;
     flex-flow: column;
     width: 100%;
-    max-height: 84vh;
+    height: calc(100vh - 10em);
 }
 
 table.ItemsTable thead {
