items status in separate state prop, modbus serial selector with datalist auto complete and hiden ugly arrow

--- a/frontend/src/items/Index.css
+++ b/frontend/src/items/Index.css
@@ -23,3 +23,8 @@ table.items tr {
 svg.draggable {
     cursor: move;
 }
+
+/* hide ugly datalist arrow down */
+input::-webkit-calendar-picker-indicator {
+    color: white;
+}
