previous commit made dragging fast again, this makes it reliable for labels that do not overflow their area with larger than fitted font sizes

--- a/frontend/src/items/Index.css
+++ b/frontend/src/items/Index.css
@@ -28,3 +28,10 @@ svg.draggable {
 input::-webkit-calendar-picker-indicator {
     color: white;
 }
+
+svg text {
+    -webkit-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
