--- a/frontend/src/items/Index.css
+++ b/frontend/src/items/Index.css
@@ -35,3 +35,7 @@ svg text {
    -ms-user-select: none;
    user-select: none;
 }
+
+.form-floating:not(:placeholder-shown) {
+    color: silver !important;
+}
