cloud page names cleanup, added demo01 files

--- a/cloud/styles/index.css
+++ b/cloud/styles/index.css
@@ -1,3 +1,7 @@
+a {
+    text-decoration: none;
+}
+
 .leaveMessage {
     cursor: pointer;
     max-width: 5em;
@@ -15,3 +19,6 @@
     color: steelblue;
 }
 
+.slide {
+    cursor: pointer;
+}
