--- a/cloud/styles/index.css
+++ b/cloud/styles/index.css
@@ -22,3 +22,19 @@ a {
 .slide {
     cursor: pointer;
 }
+
+.video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+  }
+  
+  .video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+  
