--- a/frontend/src/editor/Index.css
+++ b/frontend/src/editor/Index.css
@@ -14,6 +14,10 @@ svg text {
    user-select: none;
 }
 
+svg:focus{
+    outline: none;
+}
+
 .form-floating:not(:placeholder-shown) {
     color: silver !important;
 }
