fixed _not null captured_ exception because of blur no being generated when click the grid rect

--- a/frontend/src/editor/Index.css
+++ b/frontend/src/editor/Index.css
@@ -18,6 +18,10 @@ svg:focus {
     outline: none;
 }
 
+rect:focus {
+    outline: none;
+}
+
 .form-floating:not(:placeholder-shown) {
     color: silver !important;
 }
